<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/icons8_settings_50"
        android:title="@string/title_settings" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/icons8_sun_64"
        android:title="@string/title_sun" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/icons8_full_moon_64"
        android:title="@string/title_moon" />

    <item
        android:id="@+id/weatherFragment"
        android:icon="@drawable/weather_icon"
        android:title="@string/weather" />

    <item
        android:id="@+id/forecastFragment"
        android:icon="@drawable/icons8_clock_64"
        android:title="@string/forecast" />

</menu>