<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.navbar.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.navbar.ui.sun.SunFragment"
        android:label="@string/title_sun"
        tools:layout="@layout/fragment_sun" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.navbar.ui.moon.MoonFragment"
        android:label="@string/title_moon"
        tools:layout="@layout/fragment_moon" />
    <fragment
        android:id="@+id/weatherFragment"
        android:name="com.example.navbar.ui.weather.WeatherFragment"
        android:label="WeatherFragment" />
    <fragment
        android:id="@+id/forecastFragment"
        android:name="com.example.navbar.ui.forecast.ForecastFragment"
        android:label="ForecastFragment" />
</navigation>