<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.sun.SunFragment"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bright_blue"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#023e8a"
            android:gravity="center">

            <TextView
                android:id="@+id/text_city_sun"
                style="@style/light_text"
                android:textSize="24sp"

                />

            <TextView
                android:id="@+id/text_device_time_sun_value"
                style="@style/light_text"
                android:textSize="24sp"

                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"

            >

            <TextView
                android:id="@+id/text_altitude_sun"
                style="@style/light_text"
                android:text="@string/altitude" />

            <TextView
                android:id="@+id/text_altitude_sun_value"
                style="@style/light_text"
                android:gravity="center_horizontal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/light_blue"
            android:gravity="center">

            <TextView
                android:id="@+id/text_latitude_sun"
                style="@style/light_text"
                android:text="@string/latitude" />

            <TextView
                android:id="@+id/text_latitude_sun_value"
                style="@style/light_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/text_sun_rise"
                style="@style/light_text"
                android:text="@string/sun_rise" />

            <TextView
                android:id="@+id/text_sun_rise_value"
                style="@style/light_text"

                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/light_blue"
            android:gravity="center">

            <TextView
                android:id="@+id/text_sun_set"
                style="@style/light_text"
                android:text="@string/sun_set" />

            <TextView
                android:id="@+id/text_sun_set_value"
                style="@style/light_text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/text_sun_rise_azimuth"

                style="@style/light_text"
                android:text="@string/sun_rise_azimuth" />

            <TextView
                android:id="@+id/text_sun_rise_azimuth_value"
                style="@style/light_text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/light_blue"
            android:gravity="center">

            <TextView
                android:id="@+id/text_sun_set_azimuth"

                style="@style/light_text"
                android:text="Sun set azimuth: " />

            <TextView
                android:id="@+id/text_sun_set_azimuth_value"
                style="@style/light_text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/text_sun_civil_dawn"

                style="@style/light_text"
                android:text="@string/sun_civil_dawn" />

            <TextView
                android:id="@+id/text_sun_civil_dawn_value"
                style="@style/light_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:background="@color/light_blue"
            android:gravity="center">

            <TextView
                android:id="@+id/text_sun_civil_twilight"
                style="@style/light_text"
                android:text="@string/sun_civil_twilight" />

            <TextView
                android:id="@+id/text_sun_civil_twilight_value"
                style="@style/light_text" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>